--- a/airport_data/airport_target.ipynb
+++ b/airport_data/airport_target.ipynb
@@ -33,6 +33,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delay1= pd.read_csv(\"airport_data\\delay.csv\")\n",
+    "delay1.dropna(axis=0, subset=['Facility'], how='any', inplace=True)\n",
+    "delay1['Date'] = pd.to_datetime(delay1['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delay2= pd.read_csv(\"airport_data\\delays.csv\")\n",
+    "delay2['Date'] = pd.to_datetime(delay2['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# city pair will add with departure and arrival\n",
+    "citypair =  pd.read_csv(\"airport_data\\citypair.csv\")\n",
+    "citypair['Date'] = pd.to_datetime(citypair['Date'])\n",
+    "citypair.dropna(axis=0, subset=['Date'], how='any', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_total = pd.read_csv(\"airport_data\\total operation.csv\")\n",
+    "air_total['Date'] = pd.to_datetime(air_total['Date'])\n",
+    "air_total = air_total[['Date','Facility','Tower_Operations', 'Total_Operations']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_operation = pd.read_csv(\"airport_data\\airport_operation.csv\")\n",
+    "air_operation.dropna(axis=0, subset=['Facility'], how='any', inplace=True)\n",
+    "air_operation['Date'] = pd.to_datetime(air_operation['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "airport_analysis = pd.read_csv(\"airport_data\\airport_analysis.csv\")\n",
+    "airport_analysis['Date'] = pd.to_datetime(airport_analysis['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oil = pd.read_csv(\"airport_data\\oil_series.csv\")\n",
+    "oil['Date'] = pd.to_datetime(oil['Date'])\n",
+    "oil['oil_price'] = oil['Price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = delay1.merge(\n",
+    "    delay2, on=['Facility','Date']).merge(\n",
+    "        air_total, on=['Facility','Date']).merge(\n",
+    "            air_operation, on=['Facility','Date']).merge(\n",
+    "                airport_analysis, on=['Facility','Date']\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.merge(oil, on='Date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(axis=1, labels='Unnamed: 0',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
