--- a/train_1.ipynb
+++ b/train_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,18 +43,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DateOfDeparture</th>\n",
+       "      <th>Departure</th>\n",
+       "      <th>Arrival</th>\n",
+       "      <th>WeeksToDeparture</th>\n",
+       "      <th>std_wtd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012-06-19</td>\n",
+       "      <td>ORD</td>\n",
+       "      <td>DFW</td>\n",
+       "      <td>12.875000</td>\n",
+       "      <td>9.812647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012-09-10</td>\n",
+       "      <td>LAS</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>14.285714</td>\n",
+       "      <td>9.466734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012-10-05</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>LAX</td>\n",
+       "      <td>10.863636</td>\n",
+       "      <td>9.035883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-10-09</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>ORD</td>\n",
+       "      <td>11.480000</td>\n",
+       "      <td>7.990202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012-02-21</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>SFO</td>\n",
+       "      <td>11.450000</td>\n",
+       "      <td>9.517159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8897</th>\n",
+       "      <td>2011-10-02</td>\n",
+       "      <td>DTW</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>9.263158</td>\n",
+       "      <td>7.316967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8898</th>\n",
+       "      <td>2012-09-25</td>\n",
+       "      <td>DFW</td>\n",
+       "      <td>ORD</td>\n",
+       "      <td>12.772727</td>\n",
+       "      <td>10.641034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8899</th>\n",
+       "      <td>2012-01-19</td>\n",
+       "      <td>SFO</td>\n",
+       "      <td>LAS</td>\n",
+       "      <td>11.047619</td>\n",
+       "      <td>7.908705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8900</th>\n",
+       "      <td>2013-02-03</td>\n",
+       "      <td>ORD</td>\n",
+       "      <td>PHL</td>\n",
+       "      <td>6.076923</td>\n",
+       "      <td>4.030334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8901</th>\n",
+       "      <td>2011-11-26</td>\n",
+       "      <td>DTW</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>9.526316</td>\n",
+       "      <td>6.167733</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8902 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     DateOfDeparture Departure Arrival  WeeksToDeparture    std_wtd\n",
+       "0         2012-06-19       ORD     DFW         12.875000   9.812647\n",
+       "1         2012-09-10       LAS     DEN         14.285714   9.466734\n",
+       "2         2012-10-05       DEN     LAX         10.863636   9.035883\n",
+       "3         2011-10-09       ATL     ORD         11.480000   7.990202\n",
+       "4         2012-02-21       DEN     SFO         11.450000   9.517159\n",
+       "...              ...       ...     ...               ...        ...\n",
+       "8897      2011-10-02       DTW     ATL          9.263158   7.316967\n",
+       "8898      2012-09-25       DFW     ORD         12.772727  10.641034\n",
+       "8899      2012-01-19       SFO     LAS         11.047619   7.908705\n",
+       "8900      2013-02-03       ORD     PHL          6.076923   4.030334\n",
+       "8901      2011-11-26       DTW     ATL          9.526316   6.167733\n",
+       "\n",
+       "[8902 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'external' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-fe09c43e52e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#get dummies for evvent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexternal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mexternal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Rain'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mexternal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Events'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'%Rain%'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mexternal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Fog'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mexternal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Events'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'%Fog%'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mexternal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Hail'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mexternal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Events'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'%Hail%'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'external' is not defined"
+     ]
+    }
+   ],
    "source": [
     "    #get dummies for evvent\n",
     "    for i in range(len(external)):\n",
@@ -67,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,20 +309,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jianing/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  if sys.path[0] == '':\n",
+      "/Users/jianing/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:57: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated.  Please use Series.dt.isocalendar().week instead.\n"
+     ]
+    }
+   ],
    "source": [
     "X_train = data_merger.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       43033\n",
+       "1       35572\n",
+       "2       46675\n",
+       "3       40064\n",
+       "4       46675\n",
+       "        ...  \n",
+       "8897    40025\n",
+       "8898    43672\n",
+       "8899    53395\n",
+       "8900    43050\n",
+       "8901    40025\n",
+       "Name: d_RPI, Length: 8902, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_train.head()"
+    "\n",
+    "X_train['d_RPI']"
    ]
   },
   {
